Добавлены миграции для актуальных изменений моделей

--- a/frontend/templates/MainMenu.html
+++ b/frontend/templates/MainMenu.html
@@ -167,33 +167,20 @@
     <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
       <div>
         <img src="{% static 'Icons/Logo.png' %}" alt="EduPath Logo" class="h-10 mb-4" />
-        <p class="text-secondary text-sm max-w-xs">Платформа для изучения UI дизайна и 3D иллюстраций.</p>
-      </div>
-      <div>
-        <h3 class="font-semibold mb-3">Курсы</h3>
-        <ul class="space-y-2 text-sm text-secondary">
-          <li><a href="#" class="hover:text-[var(--color-primary)]">UI Design</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">3D Illustration</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Figma Basics</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">UX Research</a></li>
-        </ul>
+        <p class="text-secondary text-sm max-w-xs">Прокачай свой мозг :) </p>
       </div>
       <div>
         <h3 class="font-semibold mb-3">Компании</h3>
         <ul class="space-y-2 text-sm text-secondary">
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Apple</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Google</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Meta</a></li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Amazon</a></li>
+          <li><a href="https://almau.edu.kz/" class="hover:text-[var(--color-primary)]">AlmaU</a></li>
         </ul>
       </div>
       <div>
         <h3 class="font-semibold mb-3">Контакты</h3>
         <ul class="space-y-2 text-sm text-secondary">
-          <li>email@example.com</li>
-          <li>+7 (123) 456-78-90</li>
-          <li>г. Москва, ул. Пушкина, д. 10</li>
-          <li><a href="#" class="hover:text-[var(--color-primary)]">Политика конфиденциальности</a></li>
+          <li><a href="mailto:dbezrukova482@gmail.com">Написать на почту</a></li>
+          <li>+<a href="https://wa.me/77087449838" target="_blank">Написать в WhatsApp</a></li>
+          <li><a href="https://maps.app.goo.gl/kgowmT1Ww36YGruu8" class="hover:text-[var(--color-primary)]">г. Алматы, ул. Розыбакиева 227</a></li>
         </ul>
       </div>
     </div>
